--- a/Baker's Dozen Prototype/CSS/style.css
+++ b/Baker's Dozen Prototype/CSS/style.css
@@ -7,7 +7,7 @@
 }
 
 #middleNAV{
-    padding-left: 220px;
+    padding-left: 160px;
 }
 
 .active{
@@ -62,6 +62,18 @@
 
 .formInput{
     width: 100%;
+    border:none;
+    border-bottom: 2px solid #592614;
+}
+
+.quantityInput{
+    width: 30%;
+    border:none;
+    border-bottom: 2px solid #592614;
+}
+
+.deliveryInput{
+    width: 75%;
     border:none;
     border-bottom: 2px solid #592614;
 }
