--- a/BakersDozen/CSS/style.css
+++ b/BakersDozen/CSS/style.css
@@ -286,5 +286,8 @@ input:focus{
 }
 
 @media screen and (min-width: 0px) and (max-width: 576px){
-    
+    .homeImageText{
+        top:20%;
+        font-size: 27px;
+    }
 }
