--- a/BakersDozen/CSS/contactUs.css
+++ b/BakersDozen/CSS/contactUs.css
@@ -1,3 +1,10 @@
+.contactUsIMG{
+    background-image: url("../Images/contactUsImage.jpg");
+    height: 600px;
+    background-size: cover;
+    background-position: center;
+}
+
 .contact-card{
     position: absolute;
     top: 100%;
@@ -8,4 +15,11 @@
     position: absolute;
     top: 100%;
     left: 60%;
+}
+
+@media screen and (min-width: 0px) and (max-width: 576px){
+    .contactUsIMG{
+        background-size:cover;
+        background-position: center;
+    }
 }
