--- a/BakersDozen/CSS/account.css
+++ b/BakersDozen/CSS/account.css
@@ -4,7 +4,7 @@
     justify-items: center;
 }
 
-.accountHeader{
+.accountHeader {
     text-align: center;
     font-family: "Montserrat", sans-serif;
     font-weight: 100;
@@ -41,24 +41,37 @@
     left: 5%
 }
 
-.accountContainer{
+.accountContainer {
     flex-direction: row;
     position: absolute;
     overflow-x: hidden;
-    top:80%;
+    top: 80%;
 
 }
 
-.profileUser{
+.profileUser {
     margin: auto;
     width: 40%;
     display: block;
 }
 
-.inputWidth{
+.inputWidth {
     width: 100%;
 }
 
-@media screen and (min-width: 0px) and (max-width: 576px){
-    
+.darkModeButton{
+    width: 40px;
+    height: 40px;
 }
+
+.darkModeToggle {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: white;
+    border: 2px solid #592614;
+    padding: auto;
+    margin: auto;
+}
+
+@media screen and (min-width: 0px) and (max-width: 576px) {}
