--- a/BakersDozen/CSS/style.css
+++ b/BakersDozen/CSS/style.css
@@ -2,6 +2,7 @@
 /*Importing Montserrat*/
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;700;900&display=swap');
 /*Importing NotoSansJP*/
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css");
 
 * {
     overflow-x: hidden;
@@ -299,6 +300,14 @@ input:focus {
     font-size: 16px;
     background-color: #592614;
     border-radius: 25px;
+}
+
+#toggleDark{
+    font-size: 23px;
+}
+
+.toggle{
+    display: none;
 }
 
 @media screen and (min-width: 0px) and (max-width: 576px) {
