--- a/BakersDozen/CSS/productDetails.css
+++ b/BakersDozen/CSS/productDetails.css
@@ -1,54 +1,18 @@
-/* .wrapper{ 
-    background: white;
-    border-radius: 10px;
-    width: 500px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.postedComments{ 
+    text-align: left;
 }
 
-.wrapper .form input { 
-    background: #b6b6b6;
-    color: black;
+.submitBtn{
+    color: white;
     font-size: 15px;
-    width: 450px;
-    border-radius: 20px;
-    padding: 10px;
-    border: none;
-    outline: none;
-    margin-bottom: 15px;
-
-}
-
-.wrapper .form textarea { 
-background: #b6b6b6;
-color: black;
-font-size: 15px;
-width: 450px;
-border-radius: 20px;
-padding: 10px;
-border: none;
-outline: none;  
-} */
-
-/* .wrapper .form .btn {
-    color:white;
     background-color: #592614;
     border-radius: 25px;
-    left: 35%;
-    margin: 0 auto;
-    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    /* left: 35%; */
 }
 
-.wrapper .form .btn:hover{
+.submitBtn:hover{
     background-color: #bc4c35;
     color: white;
-    
-} */
-
-.commentImg{
-background-image: url("../Images/commentSectionImg.jpg");
-background-size: cover;
-height: 600px;
 }
-
